<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept">OK</string>
    <string name="add">Add</string>
    <string name="add_event">Add event</string>
    <string name="aftab1">Sunrise</string>
    <string name="aftab2">Sunset</string>
    <string name="aftab3">Midnight</string>
    <string name="altitude">Altitude</string>
    <string name="altitude_praytime">in meter (optional)</string>
    <string name="app_name">تقویم فارسی</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_language">Application Language</string>
    <string name="athan">Athan</string>
    <string name="athan_alarm">Athan Alarm</string>
    <string name="athan_alarm_summary">Prayers to trigger the alarm for</string>
    <string name="athan_disabled_summary">To set the Athan alarm, choose a location or enter the coordinates above</string>
    <string name="athan_gap">Athan Gap</string>
    <string name="athan_gap_summary">How long ahead of the Athan should the alarm be triggered (in minutes)</string>
    <string name="athan_sound">Athan Sound</string>
    <string name="athan_volume">Athan Volume</string>
    <string name="athan_volume_summary">Set the volume for the alarm</string>
    <string name="azan1">Fajr</string>
    <string name="azan2">Dhuhr</string>
    <string name="azan3">Asr</string>
    <string name="azan4">Maghrib</string>
    <string name="azan5">Isha</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="calendar">Calendar</string>
    <string name="calendar_font">Calendar Font</string>
    <string name="calendar_font_summary">Change the font for the calendar</string>
    <string name="calendar_language">Calendar Language</string>
    <string name="calendar_language_summary">The language to show the month and day names in</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clock">Clock</string>
    <string name="clock_in_24">Clock in 24 hour</string>
    <string name="clock_on_widget">Clock on the Widget</string>
    <string name="closeDrawer">Close</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compact_widget">Widget Customization</string>
    <string name="compact_widget_summary">What to show from notification and widges to make them more compact</string>
    <string name="compass">Compass</string>
    <string name="compass_disabled_message">Shortcuts are disabled!</string>
    <string name="compass_long_label">Qibla/Compass</string>
    <string name="compass_not_found">Compass sensor not found</string>
    <string name="compass_short_label">Compass</string>
    <string name="converter_disabled_message">Shortcuts are disabled!</string>
    <string name="converter_long_label">Date Converter</string>
    <string name="converter_short_label">Converter</string>
    <string name="custom_athan">Select Athan</string>
    <string name="custom_athan_summary">Select custom sound for Athan</string>
    <string name="custom_notification_is_set">Custom notification is just set</string>
    <string name="date">Date</string>
    <string name="date_converter">Date Converter</string>
    <string name="date_copied_clipboard">Copied to clipboard</string>
    <string name="date_diff_text" formatted="false">%s day (~%s year and %s month and %s day)</string>
    <string name="date_exception">The date you entered was not valid!</string>
    <string name="day">Day</string>
    <string name="default_athan">Default Athan</string>
    <string name="default_athan_name">Abdul-Basit Abdel-Samad</string>
    <string name="default_athan_summary">Return to default Athan</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="enable_notification_athan">Show Athan as a notification and device vibration</string>
    <string name="enable_notify">Persistent notification for all date types</string>
    <string name="enable_persian_digits">Enable Persian Digits</string>
    <string name="events">Events</string>
    <string name="events_summary">Events to show</string>
    <string name="gps_location">Get location from GPS or network</string>
    <string name="gps_location_help">Other options are not needed if this is possible</string>
    <string name="iran_time">Iran Time</string>
    <string name="islamic_offset">Islamic offset</string>
    <string name="islamic_offset_summary">Adjust Islamic calendar by adding a number</string>
    <string name="language">Language</string>
    <string name="latitude">Latitude</string>
    <string name="location">Location</string>
    <string name="location_help">If none of them, specify it below</string>
    <string name="longitude">Longitude</string>
    <string name="main_calendar">Main Calendar</string>
    <string name="main_calendar_summary">Change main calendar of the app</string>
    <string name="mount">Month</string>
    <string name="notification_athan">Athan Notification</string>
    <string name="notify_date">Enable Date Notification</string>
    <string name="notify_date_lock_screen">Show notification on the lock screen</string>
    <string name="notify_date_lock_screen_summary">Only when a lock screen security method is set.</string>
    <string name="persian_digits">Persian Digits</string>
    <string name="pray_methods">Calculation methods</string>
    <string name="pray_methods_calculation">Calculation methods for pray times and Qibla compass</string>
    <string name="pray_times_calculation_setting">Pray Times Calculation Setting</string>
    <string name="select_day">Select day</string>
    <string name="select_mount">Select month</string>
    <string name="select_skin">Select a skin</string>
    <string name="select_type_date">Select date type</string>
    <string name="select_widgets_text_color">Select custom color for widgets texts</string>
    <string name="select_year">Select year</string>
    <string name="show_device_calendar_events">Personal Calendar Events</string>
    <string name="show_device_calendar_events_summary">Show personal calendar events</string>
    <string name="showing_clock_in_24">Show the clock in 24 hour</string>
    <string name="showing_clock_on_widget">Show the clock on widget</string>
    <string name="showing_iran_time">Widgets and notifications in Iran TimeZone</string>
    <string name="skin">Skin</string>
    <string name="user_interface">User interface</string>
    <string name="week_ends">Weekends</string>
    <string name="week_ends_summary">Select weekends days</string>
    <string name="week_of_year">Week of Year</string>
    <string name="week_of_year_summary">Show week of year on calendar</string>
    <string name="week_start">Week Start</string>
    <string name="week_start_summary">Select week start day</string>
    <string name="which_one_to_show">Which one to show</string>
    <string name="widget_notification_dashclock">Widget, notification bar and DashClock</string>
    <string name="widget_text_color">Widget Text Color</string>
    <string name="year">Year</string>
</resources>