<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory android:title="@string/user_interface">
        <androidx.preference.ListPreference android:icon="@drawable/ic_translate_setting" android:entries="@array/languageNames" android:title="@string/language" android:key="AppLanguage" android:defaultValue="fa" android:negativeButtonText="@string/cancel" android:entryValues="@array/languageKeys" />
        <androidx.preference.ListPreference android:icon="@drawable/ic_theme_setting" android:entries="@array/themeNames" android:title="@string/skin" android:key="Theme" android:summary="@string/select_skin" android:defaultValue="LightTheme" android:negativeButtonText="@string/cancel" android:entryValues="@array/themeKeys" />
        <androidx.preference.SwitchPreferenceCompat android:icon="@drawable/ic_looks_4_setting" android:title="@string/persian_digits" android:key="PersianDigits" android:summary="@string/enable_persian_digits" android:defaultValue="true" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/calendar">
        <androidx.preference.MultiSelectListPreference android:icon="@drawable/ic_event_setting" android:entries="@array/holidays_types" android:title="@string/events" android:key="holiday_types" android:summary="@string/events_summary" android:defaultValue="@array/default_holidays" android:dialogTitle="@string/events" android:positiveButtonText="@string/accept" android:negativeButtonText="@string/cancel" android:entryValues="@array/holidays_values" />
        <androidx.preference.SwitchPreferenceCompat android:icon="@drawable/ic_event_setting" android:title="@string/show_device_calendar_events" android:key="showDeviceCalendarEvents" android:summary="@string/show_device_calendar_events_summary" android:defaultValue="false" />
        <androidx.preference.ListPreference android:icon="@drawable/ic_calendar_setting" android:entries="@array/calendar_type" android:title="@string/main_calendar" android:key="mainCalendarType" android:summary="@string/main_calendar_summary" android:defaultValue="SHAMSI" android:negativeButtonText="@string/cancel" android:entryValues="@array/calendar_values" />
        <androidx.preference.SwitchPreferenceCompat android:icon="@drawable/ic_week_of_year_setting" android:title="@string/week_of_year" android:key="showWeekOfYearNumber" android:summary="@string/week_of_year_summary" android:defaultValue="false" />
        <androidx.preference.ListPreference android:icon="@drawable/ic_plus_1_setting" android:entries="@array/islamicOffsetNames" android:title="@string/islamic_offset" android:key="islamicOffset" android:summary="@string/islamic_offset_summary" android:defaultValue="0" android:negativeButtonText="@string/cancel" android:entryValues="@array/islamicOffsetKeys" />
        <androidx.preference.ListPreference android:icon="@drawable/ic_weekstart_setting" android:entries="@array/week_days" android:title="@string/week_start" android:key="WeekStart" android:summary="@string/week_start_summary" android:defaultValue="0" android:negativeButtonText="@string/cancel" android:entryValues="@array/week_days_value" />
        <androidx.preference.MultiSelectListPreference android:icon="@drawable/ic_weekend_setting" android:entries="@array/week_days" android:title="@string/week_ends" android:key="WeekEnds" android:summary="@string/week_ends_summary" android:defaultValue="@array/default_weekends" android:positiveButtonText="@string/accept" android:negativeButtonText="@string/cancel" android:entryValues="@array/week_days_value" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/widget_notification_dashclock">
        <androidx.preference.SwitchPreferenceCompat android:icon="@drawable/ic_notification_setting" android:title="@string/notify_date" android:key="NotifyDate" android:summary="@string/enable_notify" android:defaultValue="true" />
        <androidx.preference.SwitchPreferenceCompat android:icon="@drawable/ic_lock_outline_setting" android:title="@string/notify_date_lock_screen" android:key="NotifyDateLockScreen" android:summary="@string/notify_date_lock_screen_summary" android:dependency="NotifyDate" android:defaultValue="true" />
        <androidx.preference.ListPreference android:icon="@drawable/ic_brush_setting" android:entries="@array/colorNames" android:title="@string/widget_text_color" android:key="SelectedWidgetTextColor" android:summary="@string/select_widgets_text_color" android:defaultValue="\#ffffffff" android:negativeButtonText="@string/cancel" android:entryValues="@array/colorKeys" />
        <androidx.preference.SwitchPreferenceCompat android:icon="@drawable/ic_timezone_setting" android:title="@string/iran_time" android:key="IranTime" android:summary="@string/showing_iran_time" android:defaultValue="false" />
        <androidx.preference.SwitchPreferenceCompat android:icon="@drawable/ic_watch_setting" android:title="@string/clock_on_widget" android:key="WidgetClock" android:summary="@string/showing_clock_on_widget" android:defaultValue="true" />
        <androidx.preference.SwitchPreferenceCompat android:icon="@drawable/ic_ampm_setting" android:title="@string/clock_in_24" android:key="WidgetIn24" android:summary="@string/showing_clock_in_24" android:defaultValue="true" />
        <androidx.preference.MultiSelectListPreference android:icon="@drawable/ic_compact_setting" android:entries="@array/what_to_show" android:title="@string/compact_widget" android:key="what_to_show" android:summary="@string/compact_widget_summary" android:defaultValue="@array/what_to_show_default" android:dialogTitle="@string/which_one_to_show" android:positiveButtonText="@string/accept" android:negativeButtonText="@string/cancel" android:entryValues="@array/what_to_show_keys" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/pray_times_calculation_setting">
        <androidx.preference.ListPreference android:icon="@drawable/ic_method_setting" android:entries="@array/prayMethodsNames" android:title="@string/pray_methods" android:key="SelectedPrayTimeMethod" android:summary="@string/pray_methods_calculation" android:defaultValue="Tehran" android:negativeButtonText="@string/cancel" android:entryValues="@array/prayMethodsKeys" />
        <com.tooskagroup1400.taghvimfarsi.view.preferences.GPSLocationPreference android:icon="@drawable/ic_gps_setting" android:title="@string/gps_location" android:key="dummy" android:summary="@string/gps_location_help" />
        <com.tooskagroup1400.taghvimfarsi.view.preferences.LocationPreference android:icon="@drawable/ic_location_city_setting" android:title="@string/location" android:key="Location" android:summary="@string/location_help" />
        <com.tooskagroup1400.taghvimfarsi.view.preferences.AthanNumericPreference android:icon="@drawable/ic_coord_setting" android:digits="0123456789." android:title="@string/latitude" android:key="Latitude" android:defaultValue="0" android:negativeButtonText="@string/cancel" android:inputType="numberDecimal" />
        <com.tooskagroup1400.taghvimfarsi.view.preferences.AthanNumericPreference android:icon="@drawable/ic_coord_setting" android:digits="0123456789." android:title="@string/longitude" android:key="Longitude" android:defaultValue="0" android:negativeButtonText="@string/cancel" android:inputType="numberDecimal" />
        <com.tooskagroup1400.taghvimfarsi.view.preferences.AthanNumericPreference android:icon="@drawable/ic_waves_setting" android:digits="0123456789." android:title="@string/altitude" android:key="Altitude" android:summary="@string/altitude_praytime" android:defaultValue="0" android:negativeButtonText="@string/cancel" android:inputType="numberDecimal" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/athan" android:key="Athan">
        <com.tooskagroup1400.taghvimfarsi.view.preferences.AthanNumericPreference android:icon="@drawable/ic_gap_setting" android:title="@string/athan_gap" android:key="AthanGap" android:summary="@string/athan_gap_summary" android:negativeButtonText="@string/cancel" android:inputType="numberSigned" />
        <com.tooskagroup1400.taghvimfarsi.view.preferences.PrayerSelectPreference android:icon="@drawable/ic_speaker_phone_setting" android:title="@string/athan_alarm" android:key="AthanAlarm" android:summary="@string/athan_alarm_summary" android:positiveButtonText="@string/accept" android:negativeButtonText="@string/cancel" />
        <androidx.preference.SwitchPreferenceCompat android:icon="@drawable/ic_notification_setting" android:title="@string/notification_athan" android:key="NotificationAthan" android:summary="@string/enable_notification_athan" android:defaultValue="false" android:disableDependentsState="true" />
        <androidx.preference.Preference android:icon="@drawable/ic_volume_setting" android:title="@string/custom_athan" android:key="pref_key_ringtone" android:summary="@string/custom_athan_summary" android:dependency="NotificationAthan" />
        <androidx.preference.Preference android:icon="@drawable/ic_volume_setting" android:title="@string/default_athan" android:key="pref_key_ringtone_default" android:summary="@string/default_athan_summary" android:dependency="NotificationAthan" />
        <com.tooskagroup1400.taghvimfarsi.view.preferences.AthanVolumePreference android:icon="@drawable/ic_volume_setting" android:title="@string/athan_volume" android:key="AthanVolume" android:summary="@string/athan_volume_summary" android:dependency="NotificationAthan" android:negativeButtonText="@string/cancel" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>