<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="400.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:padding="@dimen/view_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_size_description" android:textColor="?colorTextSecond" android:id="@id/calendarTypeTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_type_date" />
        <androidx.appcompat.widget.AppCompatSpinner android:textSize="@dimen/text_size_description" android:textColor="?colorTextNormal" android:entries="@array/calendar_type" android:id="@id/calendarTypeSpinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/day" />
        <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:id="@id/containerYearSelector" android:paddingTop="@dimen/converter_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_size_description" android:textColor="?colorTextSecond" android:id="@id/converterLabelYear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/year" />
            <androidx.appcompat.widget.AppCompatSpinner android:textSize="@dimen/text_size_description" android:textColor="?colorTextNormal" android:id="@id/yearSpinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/select_year" android:spinnerMode="dialog" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat android:orientation="horizontal" android:id="@id/containerDateSelector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:id="@id/containerDaySelector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="2.0">
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_size_description" android:textColor="?colorTextSecond" android:id="@id/converterLabelDay" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/day" />
                <androidx.appcompat.widget.AppCompatSpinner android:textSize="30.0sp" android:textColor="?colorTextNormal" android:id="@id/daySpinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/select_day" android:foregroundGravity="right" android:spinnerMode="dialog" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:id="@id/containerMonthSelector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_size_description" android:textColor="?colorTextSecond" android:id="@id/converterLabelMonth" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mount" />
                <androidx.appcompat.widget.AppCompatSpinner android:textSize="@dimen/text_size_description" android:textColor="?colorTextNormal" android:id="@id/monthSpinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/select_mount" android:spinnerMode="dialog" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>